--- a/TEMPLATE-03-/template.html
+++ b/TEMPLATE-03-/template.html
@@ -252,7 +252,7 @@
       <div class="container">
         <div class="box">
           <img src="imgs/avatar-01.png" alt="" />
-          <h3>Mohamed Farag</h3>
+          <h3>Ellin shaia</h3>
           <span class="title">Full Stack Developer</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
@@ -268,7 +268,7 @@
         </div>
         <div class="box">
           <img src="imgs/avatar-02.png" alt="" />
-          <h3>Mohamed Ibrahim</h3>
+          <h3>Abdulrahman AlHebri</h3>
           <span class="title">Full Stack Developer</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
@@ -284,8 +284,8 @@
         </div>
         <div class="box">
           <img src="imgs/avatar-03.png" alt="" />
-          <h3>Shady Nabil</h3>
-          <span class="title">Full Stack Developer</span>
+          <h3>Rani Shaia</h3>
+          <span class="title">Banker</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -300,8 +300,8 @@
         </div>
         <div class="box">
           <img src="imgs/avatar-04.png" alt="" />
-          <h3>Amr Hendawy</h3>
-          <span class="title">Full Stack Developer</span>
+          <h3>Layal Bsher</h3>
+          <span class="title">Architact</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -316,8 +316,8 @@
         </div>
         <div class="box">
           <img src="imgs/avatar-05.png" alt="" />
-          <h3>Sherief Ashraf</h3>
-          <span class="title">Full Stack Developer</span>
+          <h3>Hiba Alm</h3>
+          <span class="title">Therpist</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -332,8 +332,8 @@
         </div>
         <div class="box">
           <img src="imgs/avatar-06.png" alt="" />
-          <h3>Osama Mohamed</h3>
-          <span class="title">Full Stack Developer</span>
+          <h3>Diala Sh</h3>
+          <span class="title">Engineer</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
