--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@
       <h2 class="main-title">About</h2>
       <div class="container">
         <p><span>HELLO THERE! I'M A FRONT-END DEVELOPER .</span><br>
-          I'm a Third Year Student at Syrian Virtual Unvirsity, I Study Information Technology Engineering.
+          I'm a Third Year Student at Syrian Virtual Unversity, I Study Information Technology Engineering.
            I've finally found my passion at the crossroads of design and technology. The one lesson that stood out throughout this journey was the importance of the end user. Whether a physical or digital product, its purpose needs to be obvious, and the product itself has to be easy to use. So no matter what I'm working on, I always have the user in mind and try my hardest to create an enjoyable experience for them.</p>
       </div>
     </div>
