--- a/template.html
+++ b/template.html
@@ -65,7 +65,7 @@
           </div>
           <div class="cardfooter">
             <p class="tag">#HTML #CSS  #JS</p>
-            <a href="28-3-2024 ecommerce/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+            <a href="28-3-2024 ecommerce/index.html" target="_blank"><button type="button" class="action">View </button></a>
             
           </div>
           </div>
@@ -79,7 +79,7 @@
               </div>
               <div class="cardfooter">
                 <p class="tag">#HTML #CSS #JS </p>
-                <a href="new/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                <a href="new/index.html" target="_blank"><button type="button" class="action">View </button></a>
               </div>
               </div>
 
@@ -90,7 +90,7 @@
                 </div>
                 <div class="cardfooter">
                   <p class="tag">#HTML #CSS </p>
-                  <a href="TEMPLATE-03-/template.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                  <a href="TEMPLATE-03-/template.html" target="_blank"><button type="button" class="action">View </button></a>
                 </div>
                 </div>
 
@@ -101,7 +101,7 @@
                   </div>
                   <div class="cardfooter">
                     <p class="tag">#HTML #CSS </p>
-                    <a href="TEMPLATE-2-/template-2-.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                    <a href="TEMPLATE-2-/template-2-.html" target="_blank"><button type="button" class="action">View </button></a>
                   </div>
                   </div>
 
@@ -112,7 +112,7 @@
                     </div>
                     <div class="cardfooter">
                       <p class="tag">#HTML #CSS </p>
-                      <a href="TEMPLATE-1-/template-1-.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                      <a href="TEMPLATE-1-/template-1-.html" target="_blank"><button type="button" class="action">View </button></a>
                     </div>
                     </div>
 
@@ -123,7 +123,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS #JS</p>
-                        <a href="xo game/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="xo game/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
 
@@ -134,7 +134,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS #JS</p>
-                        <a href="Text to speech coverter/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="Text to speech coverter/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
 
@@ -145,7 +145,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS #JS</p>
-                        <a href="Mario Matching Game/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="Mario Matching Game/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
 
@@ -156,7 +156,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS #JS</p>
-                        <a href="notes app/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="notes app/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
                     <div class="card">
@@ -166,7 +166,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS #JS</p>
-                        <a href="To-Do List App/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="To-Do List App/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
 
@@ -177,7 +177,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS</p>
-                        <a href="CryptoCurrency website/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="CryptoCurrency website/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
 
@@ -188,7 +188,7 @@
                       </div>
                       <div class="cardfooter">
                         <p class="tag">#HTML #CSS</p>
-                        <a href="Robogenix/index.html" target="_blank"><button type="button" class="action">Get started </button></a>
+                        <a href="Robogenix/index.html" target="_blank"><button type="button" class="action">View </button></a>
                       </div>
                     </div>
         </div>
@@ -205,7 +205,7 @@
     <div class="footer" id="Contact">
       <div class="container">
         <div class="box">
-          <h3>ELLIN SHAIA</h3>
+          <h3>Ellin Shaia</h3>
           <ul class="social">
             <li>
               <a href="https://www.linkedin.com/in/elin-shaia-844963254" target="_blank" class="facebook">
@@ -213,13 +213,13 @@
               </a>
             </li>
             <li>
-              <a href="#" class="twitter">
-                <i class="fa-brands fa-twitter"></i>
+              <a href="https://www.facebook.com/profile.php?id=100085787777980&mibextid=JRoKGi" class="twitter">
+                <i class="fa-brands fa-facebook-f"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="youtube">
-                <i class="fa-brands fa-youtube-square"></i>
+              <a href="https://www.instagram.com/ellin_shaia/?igsh=bHNrY3E4anV2NWcx" class="youtube">
+                <i class="fa-brands fa-instagram"></i>
               </a>
             </li>
           </ul>
@@ -246,7 +246,7 @@
           </div>
         </div>
       </div>
-      <p class="copyright">coded by &lt;3 By Ellin shaia</p>
+      <p class="copyright">© 2024 Ellin Shaia All Rights Reserved <br><br> Coded By &lt;3 Ellin Shaia</p>
     </div>
     <!-- End Footer -->
     <script src="script.js"></script>
